societies logo added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-01.png" alt="online degrees">
+              <img src="assets/images/iaslogo1.png" alt="online degrees">
             </div>
             <div class="main-content">
               <h2>IEEE-IAS</h2>
@@ -120,11 +120,11 @@
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-02.png" alt="short courses">
+              <img src="assets/images/pelslogo.png" alt="short courses">
             </div>
             <div class="main-content">
-              <h2>IEEE-PLES</h2>
-              <p>IEEE Power & Energy Society motive sharing the latest in technological developments in the electric power industry – developing standards that guide the development and construction of equipment and systems – educating members of the industry and the general public..</p>
+              <h2>IEEE-PELS</h2>
+              <p>The Power Electronics Society (PELS) is one of the fastest-growing technical societies of the Institute of Electrical and Electronics Engineers (IEEE).</p>
               <div class="main-button">
                 <a href="#">Read More</a>
               </div>
@@ -134,7 +134,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-03.png" alt="web experts">
+              <img src="assets/images/wielogo.png" alt="web experts">
             </div>
             <div class="main-content">
               <h2>IEEE-WIE</h2>
