execom photo added

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <div class="team-member">
             
             <div class="main-content">
-              <img src="assets/images/member-01.jpg" alt="">
+              <img src="assets/images/ashish.jpg" alt="">
               
               <span class="category">CHAIR</span>
               <h2>Ashish Joy</h2>
@@ -404,7 +404,105 @@
         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/member-02.jpg" alt="">
+              <img src="assets/images/mekha.jpg" alt="">
+              <span class="category">VICE CHAIR</span>
+              <h2>Mekha Rajagopal</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/gautham.jpg" alt="">
+              <span class="category">SECRETARY</span>
+              <h2>Gautham Jayanth</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/sneha.jpg" alt="">
+              <span class="category">JOINT-SECRETARY</span>
+              <h2>Sneha P S</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/nikhil.jpg" alt="">
+              <span class="category">TREASURER</span>
+              <h2>Nikhil Shiju</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/ajay.jpg" alt="">
+              <span class="category">LINK-REPRESENTATIVE</span>
+              <h2>Ajay P M</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/noel.jpg" alt="">
+              <span class="category">WEB-MASTER</span>
+              <h2>Noel M Aby</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/adnan.jpg" alt="">
+              <span class="category">MEDIA-LEAD</span>
+              <h2>Mohamad Adnan</h2>
+              <ul class="social-icons">
+                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+         <div class="col-lg-3 col-md-6">
+          <div class="team-member">
+            <div class="main-content">
+              <img src="assets/images/sarath.jpg" alt="">
               <span class="category">Technical-Coordinator</span>
               <h2>Sarath S Nair</h2>
               <ul class="social-icons">
@@ -415,12 +513,12 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/member-03.jpg" alt="">
-              <span class="category">Treasurer</span>
-              <h2>Nikhil Shiju</h2>
+              <img src="assets/images/jithin.jpg" alt="">
+              <span class="category">EVENT-Coordinator</span>
+              <h2>Jithin George Thomas</h2>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -429,20 +527,20 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/member-04.jpg" alt="">
-              <span class="category">Web-Master</span>
-              <h2>Noel M Aby</h2>
+              <img src="assets/images/krishnendhu.jpg" alt="">
+              <span class="category">MEMBERSHIP-DEVELOPMENT-LEAD</span>
+              <h2>Krishnendhu S</h2>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
               </ul>
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div> 
